# vision20

./: .gitmodules  README.md
autostart/: vision-primary.service  vision-secondary.service  vision-tertiary.service
notes/: RobotHardline  nanovision-setup.txt
plugins/bot-vision/: configure.ac
plugins/bot-vision/plugins/: Makefile.am  bothudoverlay.c  bothudoverlay.h  botvision.c  botvision.h  botvisionplugin.c
plugins/bot-vision/tools/: Makefile.am  botvision.c
python/: cv60.py  cvbasic.py  cvtest.py  cvtest2.py  cvwebcam.py
scripts/: nano  nano-server.sh  nanofileudp_auto  nanoplay  nanoplay2  nanoplay3  playback  webcam  webcam2  webcamfileudp_auto  windowsplay.bat  windowsplay2.bat
src/: Makefile  basic_test.cpp  gstvision.cpp  gstvision.h  vision_test.cpp
