plugin_LTLIBRARIES = libbotvision.la

# sources used to compile this plug-in
libbotvision_la_SOURCES = botvisionplugin.c botvision.c botvision.h bothudoverlay.h bothudoverlay.c

# compiler and linker flags used to compile this plugin, set in configure.ac
libbotvision_la_CFLAGS = $(GST_CFLAGS)
libbotvision_la_LIBADD = $(GST_LIBS)
libbotvision_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

